# todoapp

backend/: pyproject.toml
backend/app/: .env  app.py
backend/app/core/: config.py
